# osmo-bsc

./: configure.ac
contrib/: jenkins.sh
doc/: Makefile.am  assignment-fsm.dot  assignment.msc  handover-inter-bsc-mo-fsm.dot  handover-inter-bsc-mt-fsm.dot  handover-inter-bsc-mt.msc  handover-intra-bsc-fsm.dot  handover.msc  lchan-fsm.dot  lchan-release.msc  lchan.msc  mgw-endpoint-fsm.dot  ms-channel-request.msc  ts-and-lchan-fsm-lifecycle.msc
doc/old/: Makefile.am
include/osmocom/bsc/: Makefile.am  abis_rsl.h  assignment_fsm.h  bsc_api.h  bsc_msc.h  bsc_msc_data.h  bsc_stubs.h  bsc_subscr_conn_fsm.h  debug.h  gsm_04_08_utils.h  gsm_data.h  gsm_data_shared.h  handover.h  handover_cfg.h  handover_decision_2.h  handover_fsm.h  lchan_alloc.h  lchan_fsm.h  lchan_rtp_fsm.h  mgw_endpoint_fsm.h  neighbor_ident.h  osmo_bsc.h  signal.h  system_information.h  timeslot_fsm.h  vty.h
openbsc/include/openbsc/: gsm_data.h
openbsc/src/libcommon/: gsm_data.c
openbsc/src/libmsc/: gsm_04_08.c  transaction.c
src/: Makefile.am
src/ipaccess/: Makefile.am  ipaccess-config.c  ipaccess-proxy.c
src/libbsc/: Makefile.am  abis_nm.c  abis_rsl.c  bsc_api.c  bsc_init.c  bsc_subscr_conn_fsm.c  bsc_vty.c  bts_ipaccess_nanobts.c  chan_alloc.c  gsm_04_08_utils.c  handover_decision.c  handover_decision_2.c  handover_logic.c  handover_vty.c  lchan_alloc.c  meas_feed.c  meas_rep.c  neighbor_ident.c  neighbor_ident_vty.c  net_init.c  paging.c
src/libcommon/: Makefile.am  gsm_data.c  gsm_data_shared.c  handover_cfg.c
src/osmo-bsc/: Makefile.am  abis_om2000.c  abis_rsl.c  assignment_fsm.c  bsc_api.c  bsc_init.c  bsc_subscr_conn_fsm.c  bsc_vty.c  bts_ipaccess_nanobts.c  bts_ipaccess_nanobts_omlattr.c  bts_siemens_bs11.c  chan_alloc.c  gsm_04_08_rr.c  gsm_04_08_utils.c  gsm_data.c  gsm_timers.c  handover_decision.c  handover_decision_2.c  handover_fsm.c  handover_logic.c  lchan_fsm.c  lchan_rtp_fsm.c  lchan_select.c  meas_rep.c  mgw_endpoint_fsm.c  neighbor_ident_vty.c  net_init.c  osmo_bsc_api.c  osmo_bsc_audio.c  osmo_bsc_bssap.c  osmo_bsc_ctrl.c  osmo_bsc_filter.c  osmo_bsc_grace.c  osmo_bsc_lcls.c  osmo_bsc_main.c  osmo_bsc_mgcp.c  osmo_bsc_sigtran.c  paging.c  pcu_sock.c  smscb.c  (+2 more)
src/stubs/: lchan_fsm_stubs.c  system_information_stubs.c  ts_fsm_stubs.c
src/utils/: Makefile.am  bs11_config.c
tests/: handover_cfg.vty  neighbor_ident.vty  neighbor_si.vty  testsuite.at
tests/abis/: Makefile.am  abis_test.c
tests/bsc/: Makefile.am  bsc_test.c
tests/bsc-nat/: bsc_nat_test.c
tests/bsc-nat-trie/: bsc_nat_trie_test.c
tests/bssap/: Makefile.am  bssap_test.c
tests/channel/: Makefile.am  channel_test.c
tests/gsm0408/: Makefile.am  gsm0408_test.c
tests/handover/: Makefile.am  handover_test.c  neighbor_ident_test.c  neighbor_ident_test.ok
tests/nanobts_omlattr/: Makefile.am  nanobts_omlattr_test.c
(+1 files in other folders)
